tests/sksl/errors/golden/StructTooDeeplyNested.glsl
### Compilation failed:

error: 9: struct 'too_deep' is too deeply nested
1 error
